some styling fixes

--- a/src/TailBlazor.NavBar/CenterNavBarItem.razor
+++ b/src/TailBlazor.NavBar/CenterNavBarItem.razor
@@ -1,4 +1,4 @@
-﻿<div class="@(string.IsNullOrEmpty(Class) ? "hidden flex-1 items-center justify-center sm:flex sm:items-stretch sm:justify-center" : Class)">
+﻿<div class="@(string.IsNullOrEmpty(Class) ? "hidden flex-1 items-center justify-center sm:flex sm:justify-center" : Class)">
     @ChildContent
 </div>
 
