--- a/src/TailBlazor.NavBar/LeftNavBarItem.razor
+++ b/src/TailBlazor.NavBar/LeftNavBarItem.razor
@@ -1,4 +1,4 @@
-﻿<div class="@(string.IsNullOrEmpty(Class) ? "flex-1 flex items-center justify-center sm:items-stretch sm:justify-start" : Class)">
+﻿<div class="@(string.IsNullOrEmpty(Class) ? "flex-1 flex items-center justify-center sm:justify-start" : Class)">
     @ChildContent
 </div>
 
