--- a/src/TailBlazor.NavBar/RightNavBarItem.razor
+++ b/src/TailBlazor.NavBar/RightNavBarItem.razor
@@ -1,4 +1,4 @@
-﻿<div class="@(string.IsNullOrEmpty(Class) ? "hidden flex-1 items-center justify-center md:flex md:items-stretch md:justify-end" : Class)">
+﻿<div class="@(string.IsNullOrEmpty(Class) ? "hidden flex-1 items-center justify-center sm:flex sm:justify-end" : Class)">
     @ChildContent
 </div>
 
