--- a/src/TailBlazor.NavBar/NavBarContent.razor
+++ b/src/TailBlazor.NavBar/NavBarContent.razor
@@ -1,8 +1,8 @@
 ﻿@implements IDisposable
 
 <div class="@(string.IsNullOrEmpty(Class) ? $"{(!MaxWidthFull ? "max-w-7xl" : "w-full")} mx-auto px-2 sm:px-6" : Class)">
-    <div class="relative flex items-center justify-between h-16">
-        <div class="absolute inset-y-0 @(this.MobileMenuButtonPosition == MobileMenuButtonPosition.Left || this.MobileMenuButtonPosition == MobileMenuButtonPosition.Undefined ? "left-0" : "right-0") flex items-center sm:hidden">
+    <div class="relative flex items-center justify-between h-20">
+        <div class="absolute inset-y-0 @(this.MobileMenuButtonPosition == MobileMenuButtonPosition.Left || this.MobileMenuButtonPosition == MobileMenuButtonPosition.Undefined ? "left-0" : "right-0") flex items-center lg:hidden">
             <!-- Mobile menu button-->
             @if (MobileMenuButtonContent != null)
             {
